page favorites, empty pages, start profile page

--- a/catalog-no-result.html
+++ b/catalog-no-result.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Гловна стрінка</title><!--[if IE]>
+    <title>Каталог немає результата пошуку</title><!--[if IE]>
     <meta http-equiv="X-UA-Compatible" content="IE = edge"><![endif]-->
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
-  <body class="index-page">
+  <body class="catalog-page">
     <div class="popup-container mfp-hide" id="mobile-menu">
       <div class="d-flex justify-content-between align-items-center header"><a class="logo"><img src="img/logo.svg" alt="logo"/></a><a class="btn outline small login" href="#">Login</a></div>
       <ul class="main-nav">
@@ -78,8 +78,6 @@
     </header>
     <main class="main-content">
       <div class="container">
-        <h1>Buying and renting property in France</h1>
-        <p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
         <div class="popup-container mfp-hide" id="search-filter">
           <div class="d-flex justify-content-between align-items-center header mb-32"><a class="logo"><img src="img/logo.svg" alt="logo"/></a><a class="btn outline small login" href="#">Login</a></div>
           <form class="main-filter">
@@ -602,375 +600,18 @@
           </form>
           <div class="text-center"><a class="btn search popup" href="#search-filter">Search options</a></div>
         </section>
-        <section class="slider-objects mt-128">
-          <div><a class="object-item" href="#">
-              <div class="image-numbers">
-                <div class="image" style="background-image: url(img/object-item/1.jpg)">
-                  <div class="overlay"></div>
-                  <button class="like"></button>
-                </div>
-                <div class="numbers">
-                  <div class="item door">4</div>
-                  <div class="item bed">2</div>
-                  <div class="item size">52</div>
-                </div>
-              </div>
-              <div class="footer">
-                <div class="inner">
-                  <h6>Apa sale &quot;Calypso&quot;</h6>
-                  <div class="d-flex justify-content-between flex-wrap">
-                    <div class="price">€ 4 000
-                      <div class="month">/ month</div>
-                    </div>
-                    <div class="tags">
-                      <div class="tag">Pars</div>
-                      <div class="tag">Place du</div>
-                    </div>
-                  </div>
-                </div>
-              </div></a>
-          </div>
-          <div><a class="object-item" href="#">
-              <div class="image-numbers">
-                <div class="image" style="background-image: url(img/object-item/2.jpg)">
-                  <div class="overlay"></div>
-                  <button class="like"></button>
-                </div>
-                <div class="numbers">
-                  <div class="item door">6</div>
-                  <div class="item bed">3</div>
-                  <div class="item size">42</div>
-                </div>
-              </div>
-              <div class="footer">
-                <div class="inner">
-                  <h6>GT for sale &quot;Calypso&quot;</h6>
-                  <div class="d-flex justify-content-between flex-wrap">
-                    <div class="price">€ 4 000 000</div>
-                    <div class="tags">
-                      <div class="tag">Telet</div>
-                      <div class="tag">Place du Châtelet 3</div>
-                    </div>
-                  </div>
-                </div>
-              </div></a>
-          </div>
-          <div><a class="object-item" href="#">
-              <div class="image-numbers">
-                <div class="image" style="background-image: url(img/object-item/3.jpg)">
-                  <div class="overlay"></div>
-                  <button class="like"></button>
-                </div>
-                <div class="numbers">
-                  <div class="item door">2</div>
-                  <div class="item bed">5</div>
-                  <div class="item size">67</div>
-                </div>
-              </div>
-              <div class="footer">
-                <div class="inner">
-                  <h6>For sale &quot;Calypso&quot;</h6>
-                  <div class="d-flex justify-content-between flex-wrap">
-                    <div class="price">€ 6 000
-                      <div class="month">/ month</div>
-                    </div>
-                    <div class="tags">
-                      <div class="tag">Care</div>
-                      <div class="tag">Place du Telet</div>
-                    </div>
-                  </div>
-                </div>
-              </div></a>
-          </div>
-          <div><a class="object-item" href="#">
-              <div class="image-numbers">
-                <div class="image" style="background-image: url(img/object-item/4.jpg)">
-                  <div class="overlay"></div>
-                  <button class="like"></button>
-                </div>
-                <div class="numbers">
-                  <div class="item door">4</div>
-                  <div class="item bed">6</div>
-                  <div class="item size">34</div>
-                </div>
-              </div>
-              <div class="footer">
-                <div class="inner">
-                  <h6>Apartment for sale &quot;Calypso&quot;</h6>
-                  <div class="d-flex justify-content-between flex-wrap">
-                    <div class="price">€ 4 000</div>
-                    <div class="tags">
-                      <div class="tag">Pars</div>
-                      <div class="tag">Du Châtelet</div>
-                    </div>
-                  </div>
-                </div>
-              </div></a>
-          </div>
-          <div><a class="object-item" href="#">
-              <div class="image-numbers">
-                <div class="image" style="background-image: url(img/object-item/5.jpg)">
-                  <div class="overlay"></div>
-                  <button class="like"></button>
-                </div>
-                <div class="numbers">
-                  <div class="item door">5</div>
-                  <div class="item bed">30</div>
-                  <div class="item size">62</div>
-                </div>
-              </div>
-              <div class="footer">
-                <div class="inner">
-                  <h6>Apartment &quot;Calypso&quot;</h6>
-                  <div class="d-flex justify-content-between flex-wrap">
-                    <div class="price">€ 60 000
-                      <div class="month">/ month</div>
-                    </div>
-                    <div class="tags">
-                      <div class="tag">Telet</div>
-                      <div class="tag">Châtelet</div>
-                    </div>
-                  </div>
-                </div>
-              </div></a>
-          </div>
-          <div><a class="object-item" href="#">
-              <div class="image-numbers">
-                <div class="image" style="background-image: url(img/object-item/6.jpg)">
-                  <div class="overlay"></div>
-                  <button class="like"></button>
-                </div>
-                <div class="numbers">
-                  <div class="item door">4</div>
-                  <div class="item bed">3</div>
-                  <div class="item size">33</div>
-                </div>
-              </div>
-              <div class="footer">
-                <div class="inner">
-                  <h6>Apartment</h6>
-                  <div class="d-flex justify-content-between flex-wrap">
-                    <div class="price">€ 24 000
-                      <div class="month">/ month</div>
-                    </div>
-                    <div class="tags">
-                      <div class="tag">Pars</div>
-                      <div class="tag">Place du Châtelet2</div>
-                    </div>
-                  </div>
-                </div>
-              </div></a>
-          </div>
-          <div><a class="object-item" href="#">
-              <div class="image-numbers">
-                <div class="image" style="background-image: url(img/object-item/1.jpg)">
-                  <div class="overlay"></div>
-                  <button class="like"></button>
-                </div>
-                <div class="numbers">
-                  <div class="item door">6</div>
-                  <div class="item bed">12</div>
-                  <div class="item size">22</div>
-                </div>
-              </div>
-              <div class="footer">
-                <div class="inner">
-                  <h6>Apartment for sale &quot;Calypso&quot;</h6>
-                  <div class="d-flex justify-content-between flex-wrap">
-                    <div class="price">€ 320 000</div>
-                    <div class="tags">
-                      <div class="tag">Pars</div>
-                      <div class="tag">Place du Châtelet</div>
-                    </div>
-                  </div>
-                </div>
-              </div></a>
-          </div>
-          <div><a class="object-item" href="#">
-              <div class="image-numbers">
-                <div class="image" style="background-image: url(img/object-item/2.jpg)">
-                  <div class="overlay"></div>
-                  <button class="like"></button>
-                </div>
-                <div class="numbers">
-                  <div class="item door">4</div>
-                  <div class="item bed">3</div>
-                  <div class="item size">35</div>
-                </div>
-              </div>
-              <div class="footer">
-                <div class="inner">
-                  <h6>Apartment for rent</h6>
-                  <div class="d-flex justify-content-between flex-wrap">
-                    <div class="price">€ 4 000
-                      <div class="month">/ month</div>
-                    </div>
-                    <div class="tags">
-                      <div class="tag">Pars</div>
-                      <div class="tag">Place du Châtelet</div>
-                    </div>
-                  </div>
-                </div>
-              </div></a>
-          </div>
-          <div><a class="object-item" href="#">
-              <div class="image-numbers">
-                <div class="image" style="background-image: url(img/object-item/3.jpg)">
-                  <div class="overlay"></div>
-                  <button class="like"></button>
-                </div>
-                <div class="numbers">
-                  <div class="item door">7</div>
-                  <div class="item bed">14</div>
-                  <div class="item size">75</div>
-                </div>
-              </div>
-              <div class="footer">
-                <div class="inner">
-                  <h6>For sale &quot;Calypso&quot;</h6>
-                  <div class="d-flex justify-content-between flex-wrap">
-                    <div class="price">€ 4 000
-                      <div class="month">/ month</div>
-                    </div>
-                    <div class="tags">
-                      <div class="tag">Place du Châtelet</div>
-                      <div class="tag">Pars</div>
-                    </div>
-                  </div>
-                </div>
-              </div></a>
-          </div>
-          <div><a class="object-item" href="#">
-              <div class="image-numbers">
-                <div class="image" style="background-image: url(img/object-item/4.jpg)">
-                  <div class="overlay"></div>
-                  <button class="like"></button>
-                </div>
-                <div class="numbers">
-                  <div class="item door">4</div>
-                  <div class="item bed">14</div>
-                  <div class="item size">32</div>
-                </div>
-              </div>
-              <div class="footer">
-                <div class="inner">
-                  <h6>Sale &quot;Calypso&quot;</h6>
-                  <div class="d-flex justify-content-between flex-wrap">
-                    <div class="price">€ 4 000
-                      <div class="month">/ month</div>
-                    </div>
-                    <div class="tags">
-                      <div class="tag">Nhâtelet</div>
-                    </div>
-                  </div>
-                </div>
-              </div></a>
-          </div>
-        </section>
-        <section class="mt-96"><img src="img/banners/1.jpg" alt="banner 1"/>
-        </section>
-        <section class="under-banner mt-96">
-          <h2>Section title</h2>
-          <div class="row mt-48">
-            <div class="col-md-4">
-              <div class="item">
-                <div class="wrap-image"><a class="image" href="#" style="background-image: url(img/object-item/1.jpg)">
-                    <div class="overlay"></div></a></div>
-                <div class="text">
-                  <h6>Section title description about this item</h6>
-                  <div>
-                    <p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="item">
-                <div class="wrap-image"><a class="image" href="#" style="background-image: url(img/object-item/2.jpg)">
-                    <div class="overlay"></div></a></div>
-                <div class="text">
-                  <h6>Short title</h6>
-                  <div>
-                    <p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="item">
-                <div class="wrap-image"><a class="image" href="#" style="background-image: url(img/object-item/3.jpg)">
-                    <div class="overlay"></div></a></div>
-                <div class="text">
-                  <h6>Last title with description</h6>
-                  <div>
-                    <p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
       </div>
-      <section class="signs mt-96 pb-96">
+      <div class="no-result signs">
         <div class="container">
-          <h2>Our advantages</h2>
-          <p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
-          <div class="our-advantages mt-96">
-            <div class="item">
-              <div class="logo"><img src="img/icons/men-1.svg" alt="men 1"/>
-              </div>
-              <h6>Private clients</h6>
-              <ul class="list">
-                <li>Sed porttitor lectus nibh.</li>
-                <li>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.</li>
-                <li>Donec sollicitudin molestie malesuada.</li>
-                <li>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</li>
-              </ul>
-            </div>
-            <div class="item">
-              <div class="logo"><img src="img/icons/men-2.svg" alt="men 2"/>
-              </div>
-              <h6>Private clients</h6>
-              <ul class="list">
-                <li>Sed porttitor lectus nibh.</li>
-                <li>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.</li>
-                <li>Donec sollicitudin molestie malesuada.</li>
-                <li>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</li>
-              </ul>
-            </div>
+          <div class="text-center mb-32"><img src="img/icons/catalog-no-result.svg"/>
           </div>
+          <h2>There are no results for your request yet.</h2>
+          <p>Please leave us your wishes and your contact details, we will select the necessary object for you.</p>
         </div>
-      </section>
-      <section class="black-and-image">
-        <div class="text">
-          <h3>Contact a specialist</h3>
-          <div>
-            <p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula</p>
-          </div><a class="btn" href="#">Contact</a>
-        </div>
-        <div class="image" style="background-image: url(img/index-page/black-and-image/1.jpg)"></div>
-      </section>
-      <section class="black-and-image">
-        <div class="image right" style="background-image: url(img/index-page/black-and-image/2.jpg)"></div>
-        <div class="text left">
-          <h3>Order a photographer</h3>
-          <div>
-            <p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula</p>
-          </div><a class="btn" href="#">Details</a>
-        </div>
-      </section>
-      <section class="black-and-image">
-        <div class="text">
-          <h3>Legal advice</h3>
-          <div>
-            <p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula</p>
-          </div><a class="btn" href="#">Get a consultation</a>
-        </div>
-        <div class="image" style="background-image: url(img/index-page/black-and-image/3.jpg)"></div>
-      </section>
+      </div>
       <div class="container">
-        <div class="form-container mtm-56">
-          <h3>Contact us</h3>
+        <section class="form-container mtm-56">
+          <h28>Fill the form</h28>
           <p class="mb-32">Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus vestibulum ac diam sit amet quam vehicula elementum.</p>
           <form>
             <input type="text" placeholder="Name">
@@ -985,7 +626,7 @@
             </div>
             <p class="mt-16 info">This site is protected by reCAPTCHA and the<a class="link" href="#">Google Privacy Policy</a>and<a class="link" href="#">Terms of Service</a>apply.</p>
           </form>
-        </div>
+        </section>
       </div>
     </main>
     <footer class="main-footer mt-96">
