--- a/registration.html
+++ b/registration.html
@@ -45,7 +45,7 @@
               <div><a class="btn book" herf="#">Place an offer</a></div>
             </div>
           </div>
-          <div class="right d-flex align-items-center"><a class="mobile-search popup btn search" href="#mobile-search"></a>
+          <div class="right d-flex align-items-center"><a class="mobile-search popup btn search" href="#search-filter"></a>
             <nav>
               <ul class="main-nav">
                 <li><a href="#">Rent</a></li>
